--- a/Sourabh's Transformer/templates/index.html
+++ b/Sourabh's Transformer/templates/index.html
@@ -15,6 +15,48 @@
   .content{
     margin-left: 550px;
   }
+
+  body {font-family: Arial, Helvetica, sans-serif;}
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#myBtn{
+  margin-left: px;
+}
 </style>
 
 <script>
@@ -24,7 +66,10 @@
 
   function shareFunction(results) {
     alert("Sharing Results With Scraper App\nOld were a band from");
+    window.location.href = "http://stackoverflow.com";
   }
+
+  
   </script>
   
 
@@ -46,6 +91,7 @@
     <button type="submit" name="submit">Submit</button>
     <button type="submit" name="submit" onclick="myFunction()" >Help</button>
     <button type="submit" name="submit" onclick="shareFunction()" >Share Results</button>
+    <a href="http://127.0.0.1:5000/testingPost">Share Results</a>
 
   </div>
   </div>
@@ -60,5 +106,37 @@
     <label> {{afterText | safe}} </label> <br>
     
   </form>
+
+  <body>
+    
+    <button id="myBtn">Step By Step Communication Tutorial</button>
+    
+    <div id="myModal" class="modal">
+    
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some texting in the Modal.</p>
+      </div>
+    
+    </div>
+    
+    <script>
+    var modal = document.getElementById("myModal");
+    var btn = document.getElementById("myBtn");
+    var span = document.getElementsByClassName("close")[0];
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
 </body>
 </html>
